--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,12 @@
 body,
 html {
   background: transparent;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 h1,
@@ -71,8 +75,8 @@ h2 {
   padding: 12px;
 }
 
-.Entry[data-is-selected='true']::before {
-  content: '';
+.Entry[data-is-selected="true"]::before {
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
